templates/flask-app-deployment.yaml
# flask-app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskdynamodb-app
  namespace: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskdynamodb-app
  template:
    metadata:
      labels:
        app: flaskdynamodb-app
    spec:
      containers:
      - name: flaskdynamodb-app
        image: ans8795/flaskdynamodb_app:0.5
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
