templates/ingress-controller.yaml
#Ingress-controller

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
      - args:
        - --ingress-class=alb
        - --cluster-name=test-eks-cluster
        #image: docker.io/amazon/aws-alb-ingress-controller:v2.1.0
        image: public.ecr.aws/eks/aws-load-balancer-controller:v2.5.4
        name: controller
      terminationGracePeriodSeconds: 60
