templates/flask-app-service.yaml
# flask-app-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: flaskdynamodb-app-service
  namespace: flask-app
spec:
  type: NodePort
  selector:
    app: flaskdynamodb-app
  ports:
    - port: 80
      targetPort: 80
