templates/ingress-flask.yaml
# ingress-flask.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: flask-app
  name: ingress-flask
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-0caffd6796f293094
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flaskdynamodb-app-service
              port:
                number: 80
